Add acces to menu for quantity of items in Cart
Add new styles for cart page, mobile&desktop

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1560,6 +1560,24 @@ body, html {
   }
 }
 
+.cart_container .products_and_summary {
+  width: 100%;
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .cart_container.full {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1636,9 +1654,9 @@ body, html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1646,6 +1664,9 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .products_container span div {
@@ -1672,9 +1693,7 @@ body, html {
 }
 
 .products_container span .product_image img {
-  max-width: 50%;
   max-height: 100%;
-  padding: 0 0 0 1em;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -1698,7 +1717,6 @@ body, html {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  padding: 1em;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -1750,7 +1768,6 @@ body, html {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  padding: 0 1em 1em 1em;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -1759,7 +1776,136 @@ body, html {
   border: 0;
 }
 
+.summary {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(255, 196, 0, 0.137);
+}
+
+.summary .sum {
+  margin-bottom: 1em;
+}
+
+.summary .sum div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.summary .sum div span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  align-items: center;
+}
+
+.summary .sum div span:nth-child(2) {
+  margin-bottom: 0.6rem;
+}
+
+.summary .sum div p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.summary .sum div input {
+  margin-right: 0.4rem;
+  margin: auto 0.4rem auto 0;
+}
+
+.summary .sum p {
+  margin: 2rem 0;
+  color: grey;
+}
+
+.summary .sum p b {
+  color: black;
+  font-size: 1.2rem;
+}
+
+.summary div button {
+  background-color: #EEBB39;
+}
+
+.summary div button p {
+  color: white;
+}
+
+.summary div::after {
+  background-color: rgba(255, 255, 255, 0);
+}
+
 @media only screen and (max-width: 901px) {
+  .cart_container .products_and_summary {
+    margin-bottom: 3rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .cart_container .products_and_summary .products_container {
+    width: 100%;
+  }
+  .cart_container .products_and_summary .products_container .products_description {
+    padding: 1em;
+  }
+  .cart_container .products_and_summary .products_container .product_image img {
+    padding: 0 0 0 1em;
+  }
+  .cart_container .products_and_summary .products_container .delete_product {
+    padding: 0 1em 1em 1em;
+  }
+  .cart_container .products_and_summary .summary {
+    width: 100%;
+    margin-top: 3em;
+    padding-bottom: 2em;
+  }
+  .cart_container .products_and_summary .summary h2 {
+    margin-top: 2rem;
+  }
   .cart_container h1 {
     margin: 3rem 0 3rem 0;
   }
@@ -1770,9 +1916,51 @@ body, html {
   .cart_container.empty div {
     margin-bottom: 3em;
   }
+  .product_image img {
+    max-width: 10em;
+  }
 }
 
 @media only screen and (min-width: 901px) {
+  .cart_container .products_and_summary {
+    margin-bottom: 6rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .cart_container .products_and_summary .products_container {
+    width: 50%;
+  }
+  .cart_container .products_and_summary .products_container .products_description {
+    padding: 1em 3em;
+  }
+  .cart_container .products_and_summary .summary {
+    width: 50%;
+    margin-left: 3em;
+    padding-bottom: 3em;
+  }
+  .cart_container .products_and_summary .summary h2 {
+    margin-top: 3rem;
+  }
+  .cart_container .products_and_summary .product_image img {
+    padding: 0 0 0 3em;
+  }
+  .cart_container .products_and_summary .delete_product {
+    padding: 0 1em 1em 3em;
+  }
   .cart_container h1 {
     margin: 6rem 0 3rem 0;
   }
@@ -1782,6 +1970,9 @@ body, html {
   }
   .cart_container.empty div {
     margin-bottom: 6rem;
+  }
+  .product_image img {
+    max-width: 12em;
   }
 }
 /*# sourceMappingURL=main.css.map */
