--- a/public/styles/_cart.scss
+++ b/public/styles/_cart.scss
@@ -9,6 +9,11 @@
      & h1{
         @include font-size($dfb, $mfb);
      }
+    & .products_and_summary{
+        width: 100%;
+        min-height: 100%;
+        @include display-flex(column, space-between)
+    }
 }
 
 .cart_container.full{
@@ -40,7 +45,8 @@
         & span{
             border-bottom: black 2px solid;
             width: 100%;
-            @include display-flex(column, center);
+            @include display-flex(column, flex-start);
+            align-items: flex-start;
                 & div{
                     max-height: 100%;
                     height: 100%;
@@ -50,9 +56,7 @@
                     @include display-flex(row, space-between);
                     padding-bottom: 1em;
                     & img{
-                        max-width: 50%;
                         max-height: 100%;
-                        padding: 0 0 0 1em ;
                         box-sizing: border-box;
                     }
                     & div{
@@ -62,7 +66,6 @@
                 & .products_description{
                     @include display-flex(row, space-between);
                     width: 100%;
-                    padding: 1em;
                     box-sizing: border-box;
                     & h2 {
                         margin: 0;
@@ -76,7 +79,6 @@
                 & .delete_product{
                     @include display-flex(row, flex-start);
                     width: 100%;
-                    padding: 0 1em 1em 1em;
                     box-sizing: border-box;
                 }
         }
@@ -85,7 +87,81 @@
         } 
 }
 
+.summary{
+    @include display-flex(column, center);
+    background-color: rgba(255, 196, 0, 0.137);
+    .sum{
+        margin-bottom: 1em;
+            & div{
+                @include display-flex(column, flex-start);
+                align-items: flex-start;
+                    & span{
+                        @include display-flex(row, center);
+                        align-items: center;
+                    }
+                    & span:nth-child(2){
+                        margin-bottom: 0.6rem;
+                    }
+                    & p{
+                        margin-top: 0;
+                        margin-bottom: 1rem;
+                    }
+                    & input{
+                        margin-right: 0.4rem;
+                        margin: auto 0.4rem auto 0;
+                    }
+            }
+            & p {
+                margin: 2rem 0;
+                color: grey;
+                    & b{
+                        color: black;
+                        font-size: 1.2rem;
+                    }
+            }
+    }
+    & div{
+            & button {
+                background-color: $base-color;
+                    & p{
+                        color: white;
+                    }
+            }
+            &::after{
+                background-color: rgba(255, 255, 255, 0)
+            }
+    }
+}
+
 @media only screen and (max-width: 901px) {
+    .cart_container{
+        & .products_and_summary{
+            margin-bottom: 3rem;
+            @include display-flex(column, center);
+                & .products_container{
+                    width: 100%;
+                        & .products_description{
+                            padding: 1em
+                        }
+                        & .product_image{
+                            & img{
+                                padding: 0 0 0 1em ;
+                            }
+                        }
+                        & .delete_product{
+                            padding: 0 1em 1em 1em;
+                        }
+                }
+                .summary{
+                    width: 100%;
+                    margin-top: 3em;
+                    padding-bottom: 2em;
+                        & h2{
+                            margin-top: 2rem;
+                        }
+                }     
+        }
+    }
     .cart_container h1{
         margin: 3rem 0 3rem 0;
     }
@@ -98,10 +174,44 @@
             margin-bottom: 3em;
          }
     }
+    .product_image{
+        & img{
+            max-width: 10em;
+        }
+    }
 }
 
 
 @media only screen and (min-width: 901px) {
+    .cart_container{
+        & .products_and_summary{
+            margin-bottom: 6rem;
+            @include display-flex(row, center);
+            align-items: flex-start;
+                & .products_container{
+                    width: 50%;
+                        & .products_description{
+                            padding: 1em 3em
+                        }
+                }
+                & .summary{
+                    width: 50%;
+                    margin-left: 3em;
+                    padding-bottom: 3em;
+                        & h2{
+                            margin-top: 3rem;
+                        }
+                }
+                & .product_image{
+                    & img{
+                        padding: 0 0 0 3em ;
+                    }
+                }
+                & .delete_product{
+                    padding: 0 1em 1em 3em;
+                }
+        }
+    }
     .cart_container h1{
         margin: 6rem 0 3rem 0;
     }
@@ -113,5 +223,10 @@
         & div{
             margin-bottom: 6rem;
          }
+    }
+    .product_image{
+        & img{
+            max-width: 12em;
+        }
     }
 }
