--- a/public/styles/_cart.scss
+++ b/public/styles/_cart.scss
@@ -47,6 +47,10 @@
             width: 100%;
             @include display-flex(column, flex-start);
             align-items: flex-start;
+                & small{
+                    color: grey;
+                    white-space: nowrap;
+                }
                 & div{
                     max-height: 100%;
                     height: 100%;
@@ -89,7 +93,7 @@
 
 .summary{
     @include display-flex(column, center);
-    background-color: rgba(255, 196, 0, 0.137);
+    background-color: rgba(218, 218, 218, 0.137);
     .sum{
         margin-bottom: 1em;
             & div{
