--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1669,6 +1669,11 @@ body, html {
           align-items: flex-start;
 }
 
+.products_container span small {
+  color: grey;
+  white-space: nowrap;
+}
+
 .products_container span div {
   max-height: 100%;
   height: 100%;
@@ -1790,7 +1795,7 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: rgba(255, 196, 0, 0.137);
+  background-color: rgba(218, 218, 218, 0.137);
 }
 
 .summary .sum {
