Add one file for displaying delivery details
Based on delivery option from cart
Add styles to cart
Implement third part libary in one of
deliviery options

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1795,7 +1795,7 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: rgba(218, 218, 218, 0.137);
+  background-color: rgba(218, 218, 218, 0.315);
 }
 
 .summary .sum {
@@ -1836,6 +1836,28 @@ body, html {
       -ms-flex-direction: row;
           flex-direction: row;
   align-items: center;
+}
+
+.summary .sum div span label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  color: grey;
+}
+
+.summary .sum div span label img {
+  width: 4em;
+  margin: 0 0.8rem 0 0.4rem;
 }
 
 .summary .sum div span:nth-child(2) {
@@ -1978,6 +2000,96 @@ body, html {
   }
   .product_image img {
     max-width: 12em;
+  }
+}
+
+.inpost_container, .dpd_container, .error_adres {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  min-height: calc(100vh - 12em);
+  max-width: 80%;
+  margin: 0 auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.inpost_container div form span, .dpd_container div form span, .error_adres div form span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.inpost_map {
+  margin: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media only screen and (max-width: 901px) {
+  .inpost_container h1, .dpd_container h1 {
+    margin-top: 3rem;
+  }
+  .inpost_container div, .dpd_container div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 901px) {
+  .inpost_container h1, .dpd_container h1 {
+    margin-top: 6rem;
+  }
+  .inpost_container div, .dpd_container div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 /*# sourceMappingURL=main.css.map */
