--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -158,4 +158,5 @@ body, html{
 @import './custom-select';
 @import './offers';
 @import './contact';
-@import './cart'
+@import './cart';
+@import './adress'
