--- a/public/styles/_cart.scss
+++ b/public/styles/_cart.scss
@@ -93,7 +93,7 @@
 
 .summary{
     @include display-flex(column, center);
-    background-color: rgba(218, 218, 218, 0.137);
+    background-color: rgba(218, 218, 218, 0.315);
     .sum{
         margin-bottom: 1em;
             & div{
@@ -102,6 +102,14 @@
                     & span{
                         @include display-flex(row, center);
                         align-items: center;
+                            & label{
+                                @include display-flex(row, center);
+                                color: grey;
+                                    & img{
+                                        width: 4em;
+                                        margin: 0 0.8rem 0 0.4rem;
+                                    }
+                            }
                     }
                     & span:nth-child(2){
                         margin-bottom: 0.6rem;
