--- a/public/styles/_adress.scss
+++ b/public/styles/_adress.scss
@@ -142,6 +142,7 @@
 
 @media only screen and (min-width: 901px) {
     .inpost_container, .dpd_container{
+        margin-bottom: 6rem;
         & h1{
             margin-top: 6rem;
             margin-bottom: 3rem;
