--- a/public/styles/_offers.scss
+++ b/public/styles/_offers.scss
@@ -12,11 +12,14 @@
 
         & .offers{
             display: grid;
-            grid-template-columns: repeat( auto-fill, minmax( 16em, 1fr ) );
+            grid-template-columns: repeat( auto-fill, minmax( 14em, 1fr ) );
             grid-template-rows: auto;
             grid-gap: 2em;
             width: 100%;
             max-width: 100%;
+                & a{
+                    text-decoration: none;
+                }
                 & div {
                     border: black 2px solid;
                         & span {
@@ -53,6 +56,9 @@
                                     min-width: 100%;
                                     height: auto;
                                     transition: opacity 500ms linear;
+                                    &:hover{
+                                        filter: brightness(1.3);
+                                    }
                                 }
                                 & img.true{
                                     opacity: 0;
@@ -67,6 +73,7 @@
                             @include display-flex( column, center );
                             border-top: black 2px solid;
                             background-color: white;
+                            color: black;
                                 & p:nth-child(1){
                                     margin-bottom: 0;
                                     font-weight:600;
@@ -166,7 +173,7 @@
     .offers_container{
         padding-bottom: 6em;
         .category_button{
-          margin: 6em 0;
+          margin: 6em 0 4em 0;
           }    
       }
 
