--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -64,6 +64,8 @@ body, html {
   background-color: #EEBB39;
   border-bottom: 2px black solid;
   z-index: 999;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
 }
 
 .menu .logo-container {
@@ -72,6 +74,8 @@ body, html {
 }
 
 .menu .logo-container img {
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
   width: auto;
   height: 80%;
 }
@@ -110,6 +114,8 @@ body, html {
 }
 
 .menu ul li a {
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
   text-decoration: none;
   color: black;
   font-weight: 500;
@@ -364,6 +370,16 @@ body, html {
   }
   .menu .cart {
     margin-right: 2em;
+  }
+  .small {
+    height: 4em;
+  }
+  .small .logo-container img {
+    height: 6em;
+    bottom: -3em;
+  }
+  .small ul li a {
+    font-size: 1rem;
   }
 }
 
@@ -1084,13 +1100,17 @@ body, html {
 .offers_container .offers {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(16em, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(16em, 1fr));
+  -ms-grid-columns: (minmax(14em, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(14em, 1fr));
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   grid-gap: 2em;
   width: 100%;
   max-width: 100%;
+}
+
+.offers_container .offers a {
+  text-decoration: none;
 }
 
 .offers_container .offers div {
@@ -1154,6 +1174,11 @@ body, html {
   transition: opacity 500ms linear;
 }
 
+.offers_container .offers div span img:hover {
+  -webkit-filter: brightness(1.3);
+          filter: brightness(1.3);
+}
+
 .offers_container .offers div span img.true {
   opacity: 0;
   height: 12em;
@@ -1180,6 +1205,7 @@ body, html {
           flex-direction: column;
   border-top: black 2px solid;
   background-color: white;
+  color: black;
 }
 
 .offers_container .offers div .product_name_price p:nth-child(1) {
@@ -1320,7 +1346,7 @@ body, html {
     padding-bottom: 6em;
   }
   .offers_container .category_button {
-    margin: 6em 0;
+    margin: 6em 0 4em 0;
   }
   .ornament {
     width: 30em;
@@ -2255,6 +2281,9 @@ body, html {
 }
 
 @media only screen and (min-width: 901px) {
+  .inpost_container, .dpd_container {
+    margin-bottom: 6rem;
+  }
   .inpost_container h1, .dpd_container h1 {
     margin-top: 6rem;
     margin-bottom: 3rem;
