--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -179,4 +179,5 @@ body, html{
 @import './offers';
 @import './contact';
 @import './cart';
-@import './adress'
+@import './adress';
+@import './product'
